<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_questao1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listafundos"
    tools:context=".Questao1">


    <TextView
        android:id="@+id/textNome"
        android:layout_width="294dp"
        android:layout_height="67dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font_dk"
        android:text="@string/Nome"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnconfirma1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="84dp"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkpreta"
        android:layout_width="144dp"
        android:layout_height="68dp"
        android:fontFamily="@font/font_dk"
        android:text="@string/Preto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <CheckBox
        android:id="@+id/checkazul"
        android:layout_width="144dp"
        android:layout_height="68dp"
        android:fontFamily="@font/font_dk"
        android:text="@string/Azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <CheckBox
        android:id="@+id/checkbranco"
        android:layout_width="144dp"
        android:layout_height="68dp"
        android:fontFamily="@font/font_dk"
        android:text="@string/Branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <CheckBox
        android:id="@+id/checkvermelho"
        android:layout_width="144dp"
        android:layout_height="68dp"
        android:fontFamily="@font/font_dk"
        android:text="@string/Vermelho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/questao1"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:fontFamily="@font/font_dk"
        android:text="@string/Questao1"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

</androidx.constraintlayout.widget.ConstraintLayout>